--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "nodemon --inspect ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node --inspect ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
